# plato-opds

./: Cargo.toml  LICENSE  README.md  Settings-sample.toml  rustfmt.toml
.github/workflows/: build.yml
src/: main.rs  opds.rs  plato.rs
tests/: entry.xml
