[package]
authors = ["videah <videah@selfish.systems>"]
name = "plato-opds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.17"
url = "2.5"
serde_json = "1.0.115"
anyhow = "1.0.81"
toml = "0.8.12"

[dependencies.chrono]
version = "0.4.37"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.reqwest]
version = "0.12.2"
features = ["rustls-tls", "json", "blocking"]
default-features = false

[dependencies.quick-xml]
version = "0.31.0"
features = ["serialize"]
